testcases/errors/constructor0.boo
"""
constructor0.boo(10,13): BCE0024: The type 'Person' does not have a visible constructor that matches the argument list '(System.Int32)'. 
"""
class Person:
	def constructor():
		pass
	def constructor(name as string):
		pass

print(Person(3))
